# pycefr

./: .env.example  .gitignore  CODE_ANALYSIS.md  ClassIterTree.py  Makefile  NEW_README.md  OLD_README.md  README.md  dict.py  getcsv.py  levels.py  package.json  pycefr.py  pycerf.py  pycerfl.postman_collection.json  pycerfl.py  pyproject.toml  requirements.txt  settings.json  texto.py
WEB/: main.js
backend/: main.py  pycerfl.py  pyproject.toml  requirements.txt
backend-fastapi/: app.py  db_utils.py  main.py  requirements.txt
backend-fastapi/api/: analysis_routes.py  catalog_routes.py
backend-fastapi/config/: analysis_map.py
backend-fastapi/constants/: analysis_rules.py
backend-fastapi/database/: schema.sql
backend-fastapi/db/: db_utils.py
backend-fastapi/models/: analysis.py  class_model.py  common.py
backend-flask/: app.py  db_utils.py  requirements.txt
backend-flask/database/: initialize_db.sql  pycefr.db  schema.sql
backend/api/: analysis_routes.py  common.py  labels.py
backend/config/: configuration.json  settings.py
backend/constants/: analysis_rules.py
backend/db/: db_utils.py  initialize_db.sql  label_utils.py  schema.sql
backend/scripts/: ClassIterTree.py  analyzer.py  console.py  getjson.py  iter_tree.py  (+1 more)
database/: pycefr.db
frontend/: package.json  server.js
frontend-vue/: .eslintignore  .prettierignore  .stylelintrc.json  eslint.config.js  index.html  openapi-ts.config.ts  package-lock.json  package.json  package.json.backup  tsconfig.app.json  tsconfig.eslint.json  vite.config.ts
tests/: conftest.py  test_db_utils.py
(+166 files in other folders)
