[project]
name = "pycefr"
version = "0.1.0"
description = "Analizador de código para niveles CEFR"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "tabulate>=0.9.0",
    "anyio>=4.12.1",
    "click>=8.3.1",
]

[project.scripts]
pycefr = "pycefr:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend"]
py-modules = ["pycefr"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "ANN", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
explicit_package_bases = true
namespace_packages = true
mypy_path = "."
ignore_missing_imports = true
disallow_untyped_defs = true